--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -23,25 +23,25 @@
         <h1 class="ms-font-su">Welcome</h1>
     </header>
     <section id="sideload-msg" class="ms-welcome__main">
-        <h2 class="ms-font-xl">sdfbjh付款是对一定很客户看过67hdfdjtgt</h2>
+        <h2 class="ms-font-xl">Please <a target="_blank" href="https://learn.microsoft.com/office/dev/add-ins/testing/test-debug-office-add-ins#sideload-an-office-add-in-for-testing">sideload</a> your add-in to see app body.</h2>
     </section>
     <main id="app-body" class="ms-welcome__main" style="display: none;">
-        <h2 class="ms-font-xl"> jkasygudfuytfysUFO为辐i饿色如父i恶法绥拉菲的妻儿一起k. </h2>
+        <h2 class="ms-font-xl">me-welcome_main(Discover what Office Add-ins can do for you today!)</h2>
         <ul class="ms-List ms-welcome__features">
             <li class="ms-ListItem">
                 <i class="ms-Icon ms-Icon--Ribbon ms-font-xl"></i>
-                <span class="ms-font-m">sjjs uysadguydgdyjfgfjfjgfjfdsf</span>
+                <span class="ms-font-m">ms-Icon ms-Icon--Ribbon ms-font-xl:ms-font-m(Achieve more with Office integration)</span>
             </li>
             <li class="ms-ListItem">
                 <i class="ms-Icon ms-Icon--Unlock ms-font-xl"></i>
-                <span class="ms-font-m">syj给v分工界跨境电商vjhvhyiuxdf</span>
+                <span class="ms-font-m">ms-Icon--Unlock ms-font-xl:ms-font-m(Unlock features and functionality)</span>
             </li>
             <li class="ms-ListItem">
                 <i class="ms-Icon ms-Icon--Design ms-font-xl"></i>
-                <span class="ms-font-m">sdfjfgh啊帅哥都好几个撒娇好kljgfdssgbcv</span>
+                <span class="ms-font-m">ms-Icon--Design ms-font-xl:ms-font-m(Create and visualize like a pro)</span>
             </li>
         </ul>
-        <p class="ms-font-l">hk,gafkbjfhk程度和那边v程序化决策防守udsf <b>CaO</b>.</p>
+        <p class="ms-font-l">Modify the source files, then click(Original)<b>CaO</b>.</p>
         <div role="button" id="run" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
             <span class="ms-Button-label">CaO</span>
         </div>
