test insert-date, get-selected, insert-table, doc-stats

--- a/Demo/wordDemo/src/taskpane/taskpane.html
+++ b/Demo/wordDemo/src/taskpane/taskpane.html
@@ -48,6 +48,32 @@
         <div role="button" id="run" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
             <span class="ms-Button-label">Run</span>
         </div>
+        <p class="ms-font-l">Or try inserting the current date:</p>
+        <div role="button" id="insert-date" class="ms-welcome__action ms-Button ms-Button--primary ms-font-xl">
+            <span class="ms-Button-label">Insert Date</span>
+        </div>
+        <p class="ms-font-l">More features:</p>
+        <div role="button" id="get-selected" class="ms-welcome__action ms-Button ms-Button--default ms-font-l">
+            <span class="ms-Button-label">Get Selected Text</span>
+        </div>
+        <div role="button" id="insert-table" class="ms-welcome__action ms-Button ms-Button--default ms-font-l">
+            <span class="ms-Button-label">Insert Table</span>
+        </div>
+        <div role="button" id="search-replace" class="ms-welcome__action ms-Button ms-Button--default ms-font-l">
+            <span class="ms-Button-label">Search & Replace</span>
+        </div>
+        <div role="button" id="doc-stats" class="ms-welcome__action ms-Button ms-Button--default ms-font-l">
+            <span class="ms-Button-label">Document Stats</span>
+        </div>
+        <div role="button" id="insert-link" class="ms-welcome__action ms-Button ms-Button--default ms-font-l">
+            <span class="ms-Button-label">Insert Link</span>
+        </div>
+        <div role="button" id="change-font" class="ms-welcome__action ms-Button ms-Button--default ms-font-l">
+            <span class="ms-Button-label">Change Font</span>
+        </div>
+        <div role="button" id="insert-list" class="ms-welcome__action ms-Button ms-Button--default ms-font-l">
+            <span class="ms-Button-label">Insert List</span>
+        </div>
         <p><label id="item-subject"></label></p>
     </main>
 </body>
