--- a/Demo/wordDemo/src/taskpane/taskpane.html
+++ b/Demo/wordDemo/src/taskpane/taskpane.html
@@ -45,35 +45,35 @@
             </li>
         </ul>
         <p class="ms-font-l">Modify the source files, then click <b>Run</b>.</p>
-        <div role="button" id="run" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
+        <button type="button" id="run" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
             <span class="ms-Button-label">Run</span>
-        </div>
+        </button>
         <p class="ms-font-l">Or try inserting the current date:</p>
-        <div role="button" id="insert-date" class="ms-welcome__action ms-Button ms-Button--primary ms-font-xl">
+        <button type="button" id="insert-date" class="ms-welcome__action ms-Button ms-Button--primary ms-font-xl">
             <span class="ms-Button-label">Insert Date</span>
-        </div>
+        </button>
         <p class="ms-font-l">More features:</p>
-        <div role="button" id="get-selected" class="ms-welcome__action ms-Button ms-Button--default ms-font-l">
+        <button type="button" id="get-selected" class="ms-welcome__action ms-Button ms-Button--default ms-font-l">
             <span class="ms-Button-label">Get Selected Text</span>
-        </div>
-        <div role="button" id="insert-table" class="ms-welcome__action ms-Button ms-Button--default ms-font-l">
+        </button>
+        <button type="button" id="insert-table" class="ms-welcome__action ms-Button ms-Button--default ms-font-l">
             <span class="ms-Button-label">Insert Table</span>
-        </div>
-        <div role="button" id="search-replace" class="ms-welcome__action ms-Button ms-Button--default ms-font-l">
+        </button>
+        <button type="button" id="search-replace" class="ms-welcome__action ms-Button ms-Button--default ms-font-l">
             <span class="ms-Button-label">Search & Replace</span>
-        </div>
-        <div role="button" id="doc-stats" class="ms-welcome__action ms-Button ms-Button--default ms-font-l">
+        </button>
+        <button type="button" id="doc-stats" class="ms-welcome__action ms-Button ms-Button--default ms-font-l">
             <span class="ms-Button-label">Document Stats</span>
-        </div>
-        <div role="button" id="insert-link" class="ms-welcome__action ms-Button ms-Button--default ms-font-l">
+        </button>
+        <button type="button" id="insert-link" class="ms-welcome__action ms-Button ms-Button--default ms-font-l">
             <span class="ms-Button-label">Insert Link</span>
-        </div>
-        <div role="button" id="change-font" class="ms-welcome__action ms-Button ms-Button--default ms-font-l">
+        </button>
+        <button type="button" id="change-font" class="ms-welcome__action ms-Button ms-Button--default ms-font-l">
             <span class="ms-Button-label">Change Font</span>
-        </div>
-        <div role="button" id="insert-list" class="ms-welcome__action ms-Button ms-Button--default ms-font-l">
+        </button>
+        <button type="button" id="insert-list" class="ms-welcome__action ms-Button ms-Button--default ms-font-l">
             <span class="ms-Button-label">Insert List</span>
-        </div>
+        </button>
         <p><label id="item-subject"></label></p>
     </main>
 </body>
